NamespaceForTenant1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portal1
  labels:
    network: portal1
